experiment/exp2-ingress2/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ingress-1
spec:
  selector:
    matchLabels:
      app: app-ingress-1
  replicas: 3
  template:
    metadata:
      labels:
        app: app-ingress-1
    spec:
      containers:
        - name: app-ingress-1
          image: ansike/ansike:test-docker-node-v2
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress-1
spec:
  type: NodePort
  selector:
    app: app-ingress-1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8081
