experiment/exp2-ingress2/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ingress-2
spec:
  selector:
    matchLabels:
      app: app-ingress-2
  replicas: 3
  template:
    metadata:
      labels:
        app: app-ingress-2
    spec:
      containers:
        - name: app-ingress-2
          image: ansike/ansike:test-docker-node-v2
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ingress-2
spec:
  selector:
    app: app-ingress-2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8082
