experiment/exp2-ingress2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-exp-1
spec:
  ingressClassName: nginx
  rules:
    - host: www.node1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              # 1.19之前版本
              # serviceName: svc-ingress-1
              # servicePort: 8080
              # 1.19之后版本
              service:
                name: svc-ingress-1
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-exp-2
spec:
  # 标识当前ingress指向是nginx的ingress
  ingressClassName: nginx
  rules:
    - host: www.node2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              # serviceName: svc-ingress-2
              # servicePort: 8080
              service:
                name: svc-ingress-2
                port:
                  number: 8080
